--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-	"name": "ZE STRING SESSION",
-	"description": "تنصيب بوتات استخراج جلسات مقدم من سورس زد إي",
-	"logo": "https://telegra.ph/file/5116db79f852db113875c.jpg",
+	"name": "XE STRING SESSION",
+	"description": "تنصيب بوتات استخراج جلسات مقدم من سورس اكس اي",
+	"logo": "https://telegra.ph/file/dc42c424700d884c0b3c7.jpg",
 	"keywords": [
 		"telegram",
 		"bot",
